# evo-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  gateway.config  gateway.example.json  gateway.json  install.sh  start-local.sh  test-gateway.sh
.claude/: settings.local.json
.github/workflows/: release.yml
service/: com.evo.gateway.plist
src/: auth.rs  claude_code.rs  cli_common.rs  codex_auth.rs  codex_cli.rs  cursor.rs  db.rs  error.rs  github_copilot.rs  google.rs  health.rs  main.rs  oauth.rs  providers_info.rs  reliability.rs  service.rs  session_socketio.rs  state.rs  stream.rs  tmux.rs
src/middleware/: auth.rs  mod.rs
src/routes/: anthropic.rs  local_llm.rs  mod.rs  openai.rs
