[package]
name = "evo-gateway"
version = "0.3.0"
edition = "2024"

[lib]
name = "evo_gateway"
path = "src/lib.rs"

[[bin]]
name = "evo-gateway"
path = "src/main.rs"

[[bin]]
name = "evo-gateway-cli"
path = "src/bin/cli.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
evo-common = { path = "../evo-common" }
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
libsql = "0.6"
async-stream = "0.3"
tokio-stream = "0.1"
portable-pty = "0.8"
regex = "1"
